@@ -1234,3 +1234,14 @@ status_town_title_peaceful: '&b(Peaceful)'
 status_public: '&b(Public)'
 msg_days: ' days'
 msg_comptype_public: 'Public Status'
+towny_prices_title: 'Prices'
+towny_prices_town_nation: '&e[New] &2Town: &a%s &8| &2Nation: &a%s'
+towny_prices_reclaim: '&e[Reclaim] &2Town: &a%s'
+towny_prices_upkeep: '&e[Upkeep] &2Town: &a%s &8| &2Nation: &a%s'
+towny_prices_overclaimed_upkeep: '&e[Overclaimed Upkeep] &2Town: &a%s'
+towny_prices_claiming_townblock: '&e[Claiming] &2TownBlock: &a%s'
+towny_prices_claiming_townblock_increase: ' &8| &2Increase per TownBlock: &a+%s'
+towny_prices_claiming_outposts: '&e[Claiming] &2Outposts: &a%s'
+towny_prices_upkeep_based_on: '&8Town upkeep is based on &athe %s'
+towny_prices_upkeep_num_plots: 'number of plots.'
+towny_prices_upkeep_town_level: 'town level (num residents.)'
