@@ -5628,3 +5628,4 @@ v0.92.0.11:
   - Add [Not For Sale] chunk notification for when players move from a plot which is for sale, to one that is not.
     - Closes #4638.
   - Fix Tab Completion Issues, courtesy of silverwolfg11 with PR #4634.
+  - Partial translation of /towny prices.
